[package]
name = "future-fetch"
description = "http GET, using the new futures lib"
version = "0.2.0"
authors = ["Ashley Williams <ashley666ashley@gmail.com>"]
license = "MIT"

[dependencies]
futures = { git = "https://github.com/alexcrichton/futures-rs" }
futures-io = { git = "https://github.com/alexcrichton/futures-rs" }
futures-mio = { git = "https://github.com/alexcrichton/futures-rs" }
futures-tls = { git = "https://github.com/alexcrichton/futures-rs" }
headers = "0.1.0"
